<resources>
    <string name="app_name">AutoHub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insere_a_tua_password">insere a tua password</string>
    <string name="insere_username">insere o teu email</string>
    <string name="select_date_of_birth">Selecione a sua data de nascimento</string>
    <string name="inserir_nome">Insira o seu nome</string>
    <string name="confimar_pass">Confirme a sua password</string>
    <string name="inserir_email">Insira o seu email</string>
    <string name="inserir_password">Insira uma password</string>
    <string name="register">register</string>
    <string name="register_to_autohub">Registar no AutoHub</string>
    <string name="plus">+</string>
    <string name="carregar_imagem">Carregar Imagem</string>
    <string name="adicionarcarro">Adicionar um carro</string>
    <string name="adicionar">Adicionar</string>
    <string name="cancelar">Cancelar</string>
    <string name="os_meus_veiculos">Os meus veículos</string>
    <string name="guardar">Guardar</string>
    <string name="caracteristica">Caracteristica</string>
    <string name="valor">Valor</string>
    <string name="login">Login</string>
    <string name="textview">TextView</string>
    <string name="remover">Remover</string>
    <string name="editar">Editar</string>
    <string name="date">Date</string>
    <string name="perfil">Perfil</string>
    <string name="agenda">Agenda</string>
    <string name="nome_do_evento">Nome do evento</string>
    <string name="seleciona_o_carro">Selecione o Carro:</string>
    <string name="voltar">Voltar</string>
    <string name="proximo">Próximo</string>
    <string name="cancel">Cancel</string>
    <string name="imagemSelecionada">Imagem Selecionada</string>
    <string name="add_caracteristica">Adicionar Característica</string>
    <string name="adicionar_evento">Adicionar Evento</string>
    <string name="partilhar_carro">Partilhar carro</string>
    <string name="c_digo_do_destinat_rio">Código do destinatário:</string>
    <string name="selecione_o_carro_a_partilhar">Selecione o Carro a partilhar:</string>
    <string name="partilhar">Partilhar</string>
    <string name="clique_aqui_para_registar">Sem conta? Clique aqui para se registar!</string>
</resources>