<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddVeiculo">

    <Button
        android:id="@+id/go_back_button"
        android:layout_width="15dp"
        android:layout_height="20dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/ic_vector_1"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="@+id/group_42731"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/group_42731"
        android:layout_width="415dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#C0C3CF"
        android:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerModel"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerMake" />

    <Spinner
        android:id="@+id/spinnerMake"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Adicionar_carro_text" />

    <TextView
        android:id="@+id/carregar_image_text"
        android:layout_width="191dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/carregar_imagem"
        android:textColor="@color/blue_app"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonAddImage"
        app:layout_constraintHorizontal_bias="0.397"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerModel" />

    <Button
        android:id="@+id/buttonAddImage"
        android:layout_width="48dp"
        android:layout_height="43dp"
        android:layout_marginEnd="84dp"
        android:background="@drawable/ic_upload"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="18sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/carregar_image_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/carregar_image_text"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Adicionar_caracteristica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/adicionar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Adicionar_caracteristica"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Adicionar_caracteristica"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/Guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:text="Guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/Adicionar_caracteristica"
        app:layout_constraintTop_toBottomOf="@+id/Adicionar_caracteristica"
        app:layout_constraintVertical_bias="1.0" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="350dp"
        android:layout_height="228dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carregar_image_text"
        app:layout_constraintVertical_bias="0.13">

        <ListView
            android:id="@+id/nome_caracteristica"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:listSelector="@android:color/transparent"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@null">

        </ListView>
    </ScrollView>

    <TextView
        android:id="@+id/Adicionar_carro_text"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/adicionarcarro"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_42731" />

</androidx.constraintlayout.widget.ConstraintLayout>